; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_ci13xxx_udc.c_hw_intr_force.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_ci13xxx_udc.c_hw_intr_force.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_BITS = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@ABS_TESTMODE = common dso_local global i32 0, align 4
@TESTMODE_FORCE = common dso_local global i32 0, align 4
@CAP_USBINTR = common dso_local global i32 0, align 4
@CAP_USBSTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @hw_intr_force to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hw_intr_force(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @REG_BITS, align 4
  %6 = icmp sge i32 %4, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* @EINVAL, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %2, align 4
  br label %30

10:                                               ; preds = %1
  %11 = load i32, i32* @ABS_TESTMODE, align 4
  %12 = load i32, i32* @TESTMODE_FORCE, align 4
  %13 = load i32, i32* @TESTMODE_FORCE, align 4
  %14 = call i32 @hw_awrite(i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* @CAP_USBINTR, align 4
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @BIT(i32 %16)
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @BIT(i32 %18)
  %20 = call i32 @hw_cwrite(i32 %15, i32 %17, i32 %19)
  %21 = load i32, i32* @CAP_USBSTS, align 4
  %22 = load i32, i32* %3, align 4
  %23 = call i32 @BIT(i32 %22)
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @BIT(i32 %24)
  %26 = call i32 @hw_cwrite(i32 %21, i32 %23, i32 %25)
  %27 = load i32, i32* @ABS_TESTMODE, align 4
  %28 = load i32, i32* @TESTMODE_FORCE, align 4
  %29 = call i32 @hw_awrite(i32 %27, i32 %28, i32 0)
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %10, %7
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @hw_awrite(i32, i32, i32) #1

declare dso_local i32 @hw_cwrite(i32, i32, i32) #1

declare dso_local i32 @BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
